add song pkg
